--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-.container-1, .container-2
+.container-1, .container-2, .container-3
 {
     border: 1px solid black;
     width: 75%;
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.flex-box-container-1
+.flex-box-container-1, .flex-box-rps
 {
     display: flex;
     padding: 10px;
@@ -46,4 +46,9 @@
     padding: 10px;
     margin: 10px;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.733);
+}
+
+.flex-box-rps img:hover
+{
+    box-shadow: 0px 10px 50px rgba(37, 50, 233, 1);
 }
