--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-.container-1, .container-2, .container-3, .container-4
+.container-1, .container-2, .container-3, .container-4, .container-5
 {
     border: 1px solid black;
     width: 75%;
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.flex-box-container-1, .flex-box-rps, .flex-box-pick-color
+.flex-box-container-1, .flex-box-rps, .flex-box-pick-color, .flex-blackjack-row-1, .flex-blackjack-row-2, .flex-blackjack-row-3
 {
     display: flex;
     padding: 10px;
@@ -17,6 +17,22 @@
     justify-content: space-evenly;
 }
 
+.flex-blackjack-row-1, .flex-blackjack-row-2
+{
+    /*background: url('https://ie2-gfebf.cdnppb.net/mexchangeblackjack/turbo/32/assets/gameView/tableBackground.png?v32');*/
+    background: url('https://img.freepik.com/free-photo/green-poker-background_87414-2508.jpg?size=626&ext=jpg') center;
+    color: blanchedalmond;
+}
+
+.flex-blackjack-row-1 div
+{
+    border: 1px solid black;
+    padding: 10px;
+    flex: 1;
+    text-align: center;
+    height: 350px;
+}
+
 .flex-box-container-1 div
 {
     display: flex;
@@ -24,6 +40,24 @@
     align-items: center;
 }
 
+.flex-blackjack-row-2 div
+{
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.flex-blackjack-row-2 button
+{
+    border: 1px solid black;
+    padding: 10px;
+}
+
+table, th, td
+{
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+}
 
 .container-2 div
 {
